fix header overlap and position last tooltip to the left

--- a/src/_scss/pages/aboutTheData/agencyDetailsPage.scss
+++ b/src/_scss/pages/aboutTheData/agencyDetailsPage.scss
@@ -71,9 +71,14 @@
                   th {
                     position: sticky;
                     position: -webkit-sticky;
-                    z-index: 10;
+                    z-index: 9;
                     top: 0;
                     border: rem(1) solid $color-gray-lighter;
+                    // Set a higher z-index on the <th> the user is hovering over so
+                    // tooltips display above the stacking context of the other headers
+                    &:hover {
+                      z-index: 10;
+                    }
                   }
                 }
               }
